fix overflow hidden

--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -90,6 +90,7 @@ $nav-shadow: #d5d5d5;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .carousel-control-prev,
